# ThinkMate

./: Cargo.toml  LICENSE  README.md
src/: api.rs  chat.rs  helper.rs  history.rs  indicator.rs  main.rs  settings.rs  sidebar.rs  utils.rs
